Runs in jar environment